Correção media-query

--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -67,7 +67,7 @@
     }
     section#login {
         width: 70vw;
-        height: 70vw;
+        height: 70vh;
     }
 
     section#login > div#imagem {
