--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -9,7 +9,7 @@
 
 html, body {
     background-color: #5f2c82;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
@@ -31,7 +31,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
-    transition: width 0.4s, height 0.4s;
+    transition: width 0.55s, height 0.55s;
     transition-timing-function: ease;
 }
 
@@ -45,4 +45,14 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
+    text-align: justify;
 }
