--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -11,13 +11,13 @@
 
     section#login > div#imagem {
         float: left;
-        width: 40%;
+        width: 35%;
         height: 100%;
     }
 
     section#login > div#formulario {
         float: right;
-        width: 60%;
+        width: 65%;
     }
 }
 
@@ -40,6 +40,14 @@
         float: right;
         width: 50%;
     }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+        font-size: 1.2em;
+    }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
@@ -52,14 +60,22 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+        font-size: 1.2em;
     }
 }
 
@@ -73,14 +89,22 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
 
